force-app/main/default/objects/Resource_Project__c/fields/Custom_Task__c.field-meta.xml
<CustomField>
    <fullName>Custom_Task__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Custom Task</label>
    <referenceTo>Custom_Task__c</referenceTo>
    <relationshipLabel>Resource-Projects</relationshipLabel>
    <relationshipName>Resource_Projects</relationshipName>
    <type>Lookup</type>
</CustomField>