force-app/main/default/objects/Resource_Project__c/fields/Hours_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Hours_Quantity__c</fullName>
    <label>Hours Quantity</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>