force-app/main/default/objects/Resource_Project__c/fields/Project__c.field-meta.xml
<CustomField>
    <fullName>Project__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>project to which the resource is assigned</description>
    <label>Project</label>
    <referenceTo>Project__c</referenceTo>
    <relationshipLabel>Resource-Projects</relationshipLabel>
    <relationshipName>Resource_Projects</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>