force-app/main/default/objects/Resource_Project__c/fields/ProjectLineItem__c.field-meta.xml
<CustomField>
    <fullName>ProjectLineItem__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ProjectLineItem</label>
    <referenceTo>ProjectLineItem__c</referenceTo>
    <relationshipLabel>Resource-Projects</relationshipLabel>
    <relationshipName>Resource_Projects</relationshipName>
    <type>Lookup</type>
</CustomField>