force-app/main/default/objects/Resource_Project__c/fields/Resource__c.field-meta.xml
<CustomField>
    <fullName>Resource__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>resource linked to the project</description>
    <label>Resource</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Resource_Projects</relationshipName>
    <type>Lookup</type>
</CustomField>