force-app/main/default/objects/Resource_Project__c/fields/Resource_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Resource_End_Date__c</fullName>
    <description>end date assigned to the resource</description>
    <label>Resource End Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>