force-app/main/default/objects/Resource_Project__c/fields/Resource_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Resource_Start_Date__c</fullName>
    <description>start date assigned to the resource</description>
    <label>Resource Start Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>